# esp-everything

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/esp-apriltag/apriltag/: tag16h5.c  tag36h11.c
components/rjrp44__vl53l5cx/: .component_hash  CHECKSUMS.json  idf_component.yml
components/rjrp44__vl53l5cx/include/: platform.h
laptop/: comms.py  crumb_store.py  exploration.py  gen_demo_vis.py  protocol.py  relay.py  run_exploration.py  run_fleet_exploration.py  run_full_mission.py  run_mission.py  setup.yaml  stuck_monitor.py  tof_debug.py  vfh_20260330_122614.csv  vfh_20260330_165618.csv  vfh_20260330_170403.csv  vfh_20260330_170925.csv  vfh_20260330_170947.csv  vfh_20260330_171940.csv  vfh_20260330_181545.csv  vfh_20260330_182053.csv  vfh_20260331_115629.csv  vfh_20260331_115644.csv  vfh_20260331_120549.csv  vfh_20260331_121239.csv  vfh_20260331_122513.csv  vfh_20260331_123423.csv  vfh_logger.py  visualise.py
main/: CMakeLists.txt  Kconfig.projbuild  at_detect.c  at_detect.h  breadcrumb.c  breadcrumb.h  main.c  mavlink_task.c  mavlink_task.h  nav_task.c  nav_task.h  odom.c  odom.h  tof_task.c  tof_task.h  vfh.c  vfh.h  wifi_task.c  wifi_task.h
